# facto

./: .gitignore  Anchor.toml  LICENSE.txt  README.md  package-lock.json  package.json  payer.json  tsconfig.json
app/: .env.local.example  .eslintrc.json  .gitignore  global.d.ts  next.config.mjs  package-lock.json  package.json  prettier.config.js  tailwind.config.ts  tsconfig.json
app/locales/: en.json  pt-br.json
app/messages/: en.json  pt-br.json
app/src/: config.ts  env.ts  i18n.ts  middleware.ts  navigation.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: auth-provider.tsx  card.tsx  contract-interact-test-button.tsx  hero.tsx  offer-card.tsx  providers.tsx  tanstack-query-provider.tsx
app/src/hooks/: number-formatters.ts  use-accounts.ts  use-auth.ts  use-claim-installment.ts  use-connection.tsx  use-create-borrower.ts  use-create-borrower.tsx  use-create-investor-account.ts  use-create-investor.ts  use-create-offer.ts  use-create-offer.tsx  use-create-originator.ts  use-date-formatter.ts  use-deposit.ts  use-generate-new-offer-name.ts  use-generate-score-ranges.ts  (+20 more)
programs/hackathon/: Cargo.toml
programs/hackathon-solana/: Cargo.toml
programs/hackathon/src/: errors.rs  lib.rs  pubkey.rs
programs/hackathon/src/instructions/: borrower.rs  investor.rs  mod.rs  offer.rs  originator.rs
programs/hackathon/src/state/: borrower.rs  investor.rs  mod.rs  offer.rs  originator.rs
scripts/: post-build.js  pre-build.js
tests/: hackathon-solana.ts  investor.test.ts  offer.test.ts  offer.ts  originator.test.ts  utils.ts
(+189 files in other folders)
